--- a/project/client/interface/PartyTime/CMakeLists.txt
+++ b/project/client/interface/PartyTime/CMakeLists.txt
@@ -5,6 +5,8 @@ project(${PROJECT_NAME} VERSION 0.1 LANGUAGES CXX)
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
+set(CMAKE_PREFIX_PATH "/usr/lib/cmake/Qt6Widgets")
+
 set(CMAKE_AUTOUIC ON)
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
