check, build, test, memtest, covtest - done

--- a/.github/workflows/client.yml
+++ b/.github/workflows/client.yml
@@ -12,6 +12,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     container: yakwilik/cxx_project:26102022_2
+    needs: [check]
     steps:
       - uses: actions/checkout@v2
       - run: cd project/client/interface && make build
@@ -31,7 +32,7 @@ jobs:
     needs: [build]
     steps:
       - uses: actions/checkout@v2
-      - run: cd project/client/interface && make memtest
+      - run: make memtest
       - name: Upload artifacts
         uses: actions/upload-artifact@v2
         if: failure()
@@ -44,7 +45,7 @@ jobs:
     needs: [test]
     steps:
       - uses: actions/checkout@v2
-      - run: cd project/client/interface && make test && make covtest
+      - run:  make covtest
       - name: Upload artifacts
         uses: actions/upload-artifact@v2
         with:
