Squashed commit of the following:
commit 768f86af99d923cea22dacf8313dc90b59df87be
Author: Zela2520 <sugarbeatzela@gmail.com>
Date:   Thu Oct 27 17:45:22 2022 +0300

    ..

commit 9e0860bccc48c003cf340db43644cc3e0c80042e
Author: Zela2520 <sugarbeatzela@gmail.com>
Date:   Thu Oct 27 17:02:48 2022 +0300

    Client-interface: dependences have been added to ci - ready to review

commit c296cd9d40dfa51ff4bae9da877d398c59f06743
Author: Daniil Zelenko <79376281+Zela2520@users.noreply.github.com>
Date:   Thu Oct 27 16:54:35 2022 +0300

    update covtest

commit e7239a895e47f07c7ea847f6406e132ce5db072c
Author: Zela2520 <sugarbeatzela@gmail.com>
Date:   Thu Oct 27 16:47:21 2022 +0300

    client ready to review

commit 593e46d719fdc1035551663806258f26af31ffd9
Author: Zela2520 <sugarbeatzela@gmail.com>
Date:   Thu Oct 27 16:41:11 2022 +0300

    check, build, test, covtest - done. memtest works

commit c336242db0f95e7ca3e5caf6ba107feb913cb936
Author: Zela2520 <sugarbeatzela@gmail.com>
Date:   Thu Oct 27 16:30:25 2022 +0300

    check, build, test, memtest, covtest - done

commit 549ed351b917b8426aef1314308da0333df77d53
Author: Zela2520 <sugarbeatzela@gmail.com>
Date:   Thu Oct 27 16:22:46 2022 +0300

    test coverage should work

commit 84035516a4e2c2f0d70c67a6b0855483ec053fc8
Author: Zela2520 <sugarbeatzela@gmail.com>
Date:   Thu Oct 27 16:13:56 2022 +0300

    add tree packet

commit ca0cbb54b21c5b4ec277c9f7117245018596beb1
Author: Zela2520 <sugarbeatzela@gmail.com>
Date:   Thu Oct 27 15:55:18 2022 +0300

    add noconfirm flag

commit 35d4dcba2c3961353f7cbf8ee1eac1b915321a6e
Author: Zela2520 <sugarbeatzela@gmail.com>
Date:   Thu Oct 27 15:40:14 2022 +0300

    up cilin

commit 5b7d7711e0752adbf9fffc1338c1451474182b01
Author: Zela2520 <sugarbeatzela@gmail.com>
Date:   Thu Oct 27 15:30:49 2022 +0300

    linter and ci was updated

commit 4d12a01138135aa0336c95d7830c169b8b1fd912
Author: Zela2520 <sugarbeatzela@gmail.com>
Date:   Thu Oct 27 15:11:15 2022 +0300

    covtest f

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,8 @@
-cmake_minimum_required(VERSION 3.5)
-project(hw-1)
-
-add_subdirectory(project/client/interface/PartyTime)
+cmake_minimum_required(VERSION 3.14)
+PROJECT(PartyTime)
+SET(MAIN_DIR ${CMAKE_CURRENT_SOURCE_DIR} CACHE INTERNAL "MAIN_DIR")
+set(CMAKE_CXX_STANDARD 20)
 
 add_subdirectory(tests)
+add_subdirectory(deps)
+add_subdirectory(project)
