--- a/.github/workflows/client.yml
+++ b/.github/workflows/client.yml
@@ -30,7 +30,7 @@ jobs:
     needs: [build]
     steps:
       - uses: actions/checkout@v2
-      - run: cd project/client/interface && make memtest
+      - run: cd project/client/interface && make test && make memtest
       - name: Upload artifacts
         uses: actions/upload-artifact@v2
         if: failure()
