--- a/project/client/interface/tests/CMakeLists.txt
+++ b/project/client/interface/tests/CMakeLists.txt
@@ -2,22 +2,21 @@ cmake_minimum_required(VERSION 3.14)
 project(interface_tests)
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
+set(CMAKE_AUTOMOC ON)
 
-set(CMAKE_CXX_STANDARD 11)
-set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-g -O0 -Wall -Wextra -Werror -Wpedantic -fprofile-arcs -ftest-coverage -fPIC -pthread")
 set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -coverage -lgcov")
 
-enable_testing()
-find_package(GTest REQUIRED)
+
+enable_testing(true)
+find_package(Qt6 REQUIRED COMPONENTS Core Test)
 
 set(SOURCE_INTERFACE_TESTS interfaceTest.cpp)
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../PartyTime)
 
 add_executable(interface_tests ${SOURCE_INTERFACE_TESTS})
-target_link_libraries(interface_tests ${ALL_LIB} ${GTEST_LIBRARIES})
-
-# ../PartyTime/painter.hpp
-# ../PartyTime/painter.cpp
+target_link_libraries(interface_tests ${API_LIB} ${PAGES_LIB} ${COMPONENTS_LIB} Qt::Test)
+add_test(NAME interface_tests COMMAND interface_tests)
+# target_link_libraries(interface_tests PRIVATE )
