--- a/.github/workflows/client.yml
+++ b/.github/workflows/client.yml
@@ -6,14 +6,14 @@ jobs:
     container: yakwilik/cxx_project:26102022_2
     steps:
       - uses: actions/checkout@v2
-      - run: cd project/client/interface && make check
+      - run: cd project/client/interface && export QT_QPA_PLATFORM=offscreen && make check
   build:
     runs-on: ubuntu-latest
     container: yakwilik/cxx_project:26102022_2
     needs: [check]
     steps:
       - uses: actions/checkout@v2
-      - run: cd project/client/interface && make build
+      - run: cd project/client/interface && export QT_QPA_PLATFORM=offscreen && make build
   test:
     runs-on: ubuntu-latest
     container: yakwilik/cxx_project:26102022_2
@@ -21,7 +21,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: | 
-            cd project/client/interface && make test
+            cd project/client/interface && export QT_QPA_PLATFORM=offscreen && make test
             sudo pacman -S --noconfirm tree
             tree build
   memtest:
@@ -30,7 +30,7 @@ jobs:
     needs: [build]
     steps:
       - uses: actions/checkout@v2
-      - run: cd project/client/interface && make test && make memtest
+      - run: cd project/client/interface && export QT_QPA_PLATFORM=offscreen && make test && make memtest
       - name: Upload artifacts
         uses: actions/upload-artifact@v2
         if: failure()
@@ -43,7 +43,7 @@ jobs:
     needs: [test]
     steps:
       - uses: actions/checkout@v2
-      - run: cd project/client/interface && make test && make covtest
+      - run: cd project/client/interface && export QT_QPA_PLATFORM=offscreen && make test && make covtest
       - name: Upload artifacts
         uses: actions/upload-artifact@v2
         with:
