--- a/project/client/interface/PartyTime/Components/CMakeLists.txt
+++ b/project/client/interface/PartyTime/Components/CMakeLists.txt
@@ -9,12 +9,11 @@ set(COMPONENTSLIB_NAME components)
 set(COMPONENTS_LIB_DEP ${CMAKE_CURRENT_SOURCE_DIR}/EventFilter ${CMAKE_CURRENT_SOURCE_DIR}/EventForm
 ${CMAKE_CURRENT_SOURCE_DIR}/EventItem ${CMAKE_CURRENT_SOURCE_DIR}/EventList)
 
-include_directories(Qt${QT_VERSION_MAJOR}::Widgets)
 add_subdirectory(UI)
+
 add_library(${COMPONENTSLIB_NAME} ${SOURCES} ${HEADERS})
-target_include_directories(${COMPONENTSLIB_NAME} PUBLIC ${COMPONENTS_LIB_DEP})
 target_link_libraries(${COMPONENTSLIB_NAME} PRIVATE ${UI_LIB})
-target_include_directories(${COMPONENTSLIB_NAME} PUBLIC ${UI_INCLUDE_DIRS})
+target_include_directories(${COMPONENTSLIB_NAME} PUBLIC ${COMPONENTS_LIB_DEP} ${UI_INCLUDE_DIRS})
 
 set(COMPONENTS_LIB ${COMPONENTSLIB_NAME})
 set(COMPONENTS_LIB ${COMPONENTS_LIB} PARENT_SCOPE)
