--- a/project/client/interface/PartyTime/Components/UI/CMakeLists.txt
+++ b/project/client/interface/PartyTime/Components/UI/CMakeLists.txt
@@ -24,7 +24,7 @@ file(GLOB_RECURSE SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/**/*.cpp ${CMAKE_CURRENT_S
 file(GLOB_RECURSE HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/**/*.hpp ${CMAKE_CURRENT_SOURCE_DIR}/**/*.h ${CMAKE_CURRENT_SOURCE_DIR}/painter.hpp)
 
 set(LIB_NAME ui)
-set(LIB_DEP ${CMAKE_CURRENT_SOURCE_DIR}/Button ${CMAKE_CURRENT_SOURCE_DIR}/Input
+set(LIB_DEP ${CMAKE_CURRENT_SOURCE_DIR}/Button ${CMAKE_CURRENT_SOURCE_DIR}/Input ${CMAKE_CURRENT_SOURCE_DIR}/Label ${CMAKE_CURRENT_SOURCE_DIR}/Edit
 ${CMAKE_CURRENT_SOURCE_DIR}/Loader ${CMAKE_CURRENT_SOURCE_DIR}/MyModal ${CMAKE_CURRENT_SOURCE_DIR}/Navbar ${CMAKE_CURRENT_SOURCE_DIR}/Select)
 
 add_library(${LIB_NAME} ${SOURCES} ${HEADERS})
