--- a/project/client/interface/PartyTime/Components/CMakeLists.txt
+++ b/project/client/interface/PartyTime/Components/CMakeLists.txt
@@ -6,8 +6,9 @@ file(GLOB_RECURSE SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/**/*.cpp)
 file(GLOB_RECURSE HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/**/*.hpp ${CMAKE_CURRENT_SOURCE_DIR}/**/*.h)
 
 set(COMPONENTSLIB_NAME components)
-set(COMPONENTS_LIB_DEP ${CMAKE_CURRENT_SOURCE_DIR}/EventFilter ${CMAKE_CURRENT_SOURCE_DIR}/EventForm
-${CMAKE_CURRENT_SOURCE_DIR}/EventItem ${CMAKE_CURRENT_SOURCE_DIR}/EventList)
+set(COMPONENTS_LIB_DEP ${CMAKE_CURRENT_SOURCE_DIR}/EventForm
+${CMAKE_CURRENT_SOURCE_DIR}/EventItem ${CMAKE_CURRENT_SOURCE_DIR}/EventList ${CMAKE_CURRENT_SOURCE_DIR}/Header)
+# ${CMAKE_CURRENT_SOURCE_DIR}/EventFilter 
 
 add_subdirectory(UI)
 
