try to fix painter.hpp ...

--- a/project/client/interface/PartyTime/Components/CMakeLists.txt
+++ b/project/client/interface/PartyTime/Components/CMakeLists.txt
@@ -19,7 +19,7 @@ target_include_directories(${COMPONENTSLIB_NAME} PUBLIC ${COMPONENTS_LIB_DEP} ${
 set(COMPONENTS_LIB ${COMPONENTSLIB_NAME})
 set(COMPONENTS_LIB ${COMPONENTS_LIB} PARENT_SCOPE)
 set(COMPONENTS_INCLUDE_DIRS ${COMPONENTSLIB_NAME} ${COMPONENTS_LIB_DEP})
-set(COMPONENTS_INCLUDE_DIRS ${COMPONENTS_INCLUDE_DIRS} PARENT_SCOPE)
+set(COMPONENTS_INCLUDE_DIRS ${COMPONENTS_INCLUDE_DIRS} ${UI_INCLUDE_DIRS} PARENT_SCOPE)
 
 message("COMPONENTS_LIB = ${COMPONENTS_LIB}")
 message("COMPONENTS_LIB_INCLUDE_DIRS = ${COMPONENTS_INCLUDE_DIRS}")
