каркас кода, интерфейсы и тесты

--- a/project/client/connector/tests/CMakeLists.txt
+++ b/project/client/connector/tests/CMakeLists.txt
@@ -2,8 +2,9 @@ project(connector_test)
 find_package(GTest REQUIRED)
 find_package(Threads REQUIRED)
 
-set(Include_dir ${CMAKE_CURRENT_SOURCE_DIR}/../lib/interface/
-        ${CMAKE_CURRENT_SOURCE_DIR}/../lib/implementation)
+set(Include_dir ${PartyTimeConnectorIncludeDirs} ${HTTPConnectorIncludeDirs} ${LocalStorageIncludeDirs})
+
+message("include dirs: ${PartyTimeConnectorIncludeDirs}\n\n")
 
 if (NOT DEFINED MAIN_DIR)
     set(MAIN_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../../../.. CACHE PATH MAIN_DIR FORCE)
@@ -14,17 +15,20 @@ set(deps_include_dir ${MAIN_DIR}/deps/include)
 
 include_directories(${deps_include_dir} ${Include_dir})
 
-file(GLOB SOURCES src/*.cpp)
-
+AUX_SOURCE_DIRECTORY(src SOURCES)
 
 add_executable(${PROJECT_NAME} ${SOURCES})
-target_link_libraries(${PROJECT_NAME} connector ${GTEST_BOTH_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
+
+target_link_libraries(${PROJECT_NAME}
+        ${PartyTimeConnectorLibs}
+        ${GTEST_BOTH_LIBRARIES}
+        ${CMAKE_THREAD_LIBS_INIT})
 
 if (WITH_MEMCHECK)
     message("ADDING VALGRIND COMMAND")
     ADD_TEST(
             NAME TEST_WITH_VALGRIND
-            COMMAND ../../scripts/memtest.sh ./${PROJECT_NAME}
+            COMMAND ${CMAKE_SOURCE_DIR}/scripts/memtest.sh ./${PROJECT_NAME}
     )
 else()
 gtest_discover_tests(${PROJECT_NAME})
