--- a/project/client/connector/lib/CMakeLists.txt
+++ b/project/client/connector/lib/CMakeLists.txt
@@ -1,30 +1,22 @@
 cmake_minimum_required(VERSION 3.18)
 project(connector)
 
-set(Include_dir ${CMAKE_CURRENT_SOURCE_DIR}/interface/
-        ${CMAKE_CURRENT_SOURCE_DIR}/implementation)
-
-
 if (NOT DEFINED MAIN_DIR)
     set(MAIN_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../../../.. CACHE PATH MAIN_DIR FORCE)
     message("MAIN_DIR in connector lib dir: ${MAIN_DIR}\n\n")
 endif ()
 
-set(deps_include_dir "${MAIN_DIR}/deps/include")
-# message("deps_include_dir: ${deps_include_dir}\n\n")
 
-message(WARNING "systems ${CMAKE_SYSTEM_INCLUDE_PATH}")
+add_subdirectory(HttpConnector)
+add_subdirectory(LocalStorage)
+add_subdirectory(PartyTimeConnector)
+message(WARNING "building library with these flags: ${CMAKE_CXX_FLAGS}")
 
-include_directories(SYSTEM ${Include_dir} ${deps_include_dir} /usr/local/include)
-
-
-AUX_SOURCE_DIRECTORY(implementation/source SOURCES)
-
-
-add_library(${PROJECT_NAME} ${SOURCES})
-# message(WARNING "building library with these flags: ${CMAKE_CXX_FLAGS}")
 if (WITH_TESTING)
     message(WARNING "testing flags: ${testing_flags}")
 endif()
+set(PartyTimeConnectorLibs ${PartyTimeConnectorLibs} ${HTTPConnectorLibs} ${LocalStorageLibs} PARENT_SCOPE)
 
-message("SOURCES = ${SOURCES}, \n Include_dir = ${Include_dir} \n deps_include_dir = ${deps_include_dir}")
+set(PartyTimeConnectorIncludeDirs ${PartyTimeConnectorIncludeDirs} PARENT_SCOPE)
+set(LocalStorageIncludeDirs ${LocalStorageIncludeDirs} PARENT_SCOPE)
+set(HTTPConnectorIncludeDirs ${HTTPConnectorIncludeDirs} PARENT_SCOPE)
