--- a/json_struct_mapping/struct_mapping_lib/CMakeLists.txt
+++ b/json_struct_mapping/struct_mapping_lib/CMakeLists.txt
@@ -1,12 +1,18 @@
 cmake_minimum_required(VERSION 3.18)
 project(struct_mapping_lib)
 
-file(GLOB SOURCES "${PROJECT_SOURCE_DIR}")
+file(GLOB SOURCES ${PROJECT_SOURCE_DIR})
 file(GLOB INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR})
 
-add_library(${PROJECT_NAME} INTERFACE ${SOURCES})
-
 include_directories(options)
+
+add_library(${PROJECT_NAME} INTERFACE)
+
+target_include_directories(
+        ${PROJECT_NAME}
+        INTERFACE $<BUILD_INTERFACE:${${PROJECT_NAME}_SOURCE_DIR}>
+        $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
+)
 
 set(STRUCT_MAPPING_LIB_LIBRARIES ${PROJECT_NAME} PARENT_SCOPE)
 set(STRUCT_MAPPING_LIB_INCLUDE_DIRS ${INCLUDE_DIRS} PARENT_SCOPE)
