--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -1,7 +1,6 @@
 cmake_minimum_required(VERSION 3.18)
-project(Client)
 
-set(CMAKE_CXX_STANDARD 20)
+project(client)
 
 find_package(Boost REQUIRED)
 
