--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.18)
 
 project(server)
 
-find_package(Boost REQUIRED)
+find_package(Boost 1.81.0 REQUIRED)
 
 add_executable(${PROJECT_NAME}
         server/http_connection.cpp
@@ -11,4 +11,9 @@ add_executable(${PROJECT_NAME}
         server/tcp_server.cpp
         server/tcp_server.hpp
 
+        server/router.cpp
+        server/router.hpp
+
         main.cpp)
+
+target_link_libraries(${PROJECT_NAME} PRIVATE Boost::url)
