registration, auth, navbar, uiButton class was implemented

--- a/project/client/interface/PartyTime/Components/UI/CMakeLists.txt
+++ b/project/client/interface/PartyTime/Components/UI/CMakeLists.txt
@@ -20,8 +20,8 @@ find_package(Qt6 REQUIRED COMPONENTS Network)
 set(TS_FILES PartyTime_ru_RU.ts)
 set(COMPONENTS)
 
-file(GLOB_RECURSE SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/**/*.cpp ${CMAKE_CURRENT_SOURCE_DIR}/painter.cpp)
-file(GLOB_RECURSE HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/**/*.hpp ${CMAKE_CURRENT_SOURCE_DIR}/**/*.h ${CMAKE_CURRENT_SOURCE_DIR}/painter.hpp)
+file(GLOB_RECURSE SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/**/*.cpp ${CMAKE_CURRENT_SOURCE_DIR}/painter.cpp ${CMAKE_CURRENT_SOURCE_DIR}/styleHelper.cpp)
+file(GLOB_RECURSE HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/**/*.hpp ${CMAKE_CURRENT_SOURCE_DIR}/**/*.h ${CMAKE_CURRENT_SOURCE_DIR}/painter.hpp ${CMAKE_CURRENT_SOURCE_DIR}/styleHelper.hpp)
 
 set(LIB_NAME ui)
 set(LIB_DEP ${CMAKE_CURRENT_SOURCE_DIR}/Button ${CMAKE_CURRENT_SOURCE_DIR}/Input ${CMAKE_CURRENT_SOURCE_DIR}/Label ${CMAKE_CURRENT_SOURCE_DIR}/Edit
