--- a/project/client/interface/tests/CMakeLists.txt
+++ b/project/client/interface/tests/CMakeLists.txt
@@ -9,7 +9,7 @@ set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -lpthread -lgtest -coverag
 
 
 enable_testing(true)
-find_package(Qt6 REQUIRED COMPONENTS Core Test)
+find_package(Qt6 REQUIRED COMPONENTS Core Gui Test Widgets)
 find_package(GTest REQUIRED)
 
 set(SOURCE_INTERFACE_TESTS interfaceTest.cpp)
@@ -17,5 +17,5 @@ set(SOURCE_INTERFACE_TESTS interfaceTest.cpp)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../PartyTime)
 
 add_executable(interface_tests ${SOURCE_INTERFACE_TESTS})
-target_link_libraries(interface_tests ${API_LIB} ${PAGES_LIB} ${COMPONENTS_LIB} Qt::Test ${GTEST_LIBRARIES})
+target_link_libraries(interface_tests ${API_LIB} ${PAGES_LIB} ${COMPONENTS_LIB} Qt::Test Qt::Core Qt::Gui Qt::Test Qt::Widgets ${GTEST_LIBRARIES})
 add_test(NAME interface_tests COMMAND interface_tests)
