Переменные для подключения библиотек в внешние директории

--- a/project/client/connector/CMakeLists.txt
+++ b/project/client/connector/CMakeLists.txt
@@ -15,3 +15,11 @@ if(WITH_TESTING)
     message("\nrun with testing\n")
     add_subdirectory(tests)
 endif()
+
+set(PartyTimeConnectorLibs ${PartyTimeConnectorLibs} ${HTTPConnectorLibs} ${LocalStorageLibs} PARENT_SCOPE)
+set(HTTPConnectorLibs ${HTTPConnectorLibs} PARENT_SCOPE)
+set(LocalStorageLibs ${LocalStorageLibs} PARENT_SCOPE)
+
+set(PartyTimeConnectorIncludeDirs ${PartyTimeConnectorIncludeDirs} PARENT_SCOPE)
+set(LocalStorageIncludeDirs ${LocalStorageIncludeDirs} PARENT_SCOPE)
+set(HTTPConnectorIncludeDirs ${HTTPConnectorIncludeDirs} PARENT_SCOPE)
