изменения для слияния веток

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,88 @@
 **/build
 **/cmake-build-debug
 **/*.vscode
+**/Testing
+**/*valgrind
+*~
+*.autosave
+*.a
+*.core
+*.moc
+*.o
+*.obj
+*.orig
+*.rej
+*.so
+*.so.*
+*_pch.h.cpp
+*_resource.rc
+*.qm
+.#*
+*.*#
+core
+!core/
+tags
+.DS_Store
+.directory
+*.debug
+*.prl
+*.app
+moc_*.cpp
+ui_*.h
+qrc_*.cpp
+Thumbs.db
+*.res
+*.rc
+/.qmake.cache
+/.qmake.stash
+
+# qtcreator generated files
+*.pro.user*
+build-PartyTime-Desktop_x86_darwin_generic_mach_o_64bit-Debug
+
+# xemacs temporary files
+*.flc
+/build
+
+.DS_Store
+
+# Vim temporary files
+.*.swp
+
+# Visual Studio generated files
+*.ib_pdb_index
+*.idb
+*.ilk
+*.pdb
+*.sln
+*.suo
+*.vcproj
+*vcproj.*.*.user
+*.ncb
+*.sdf
+*.opensdf
+*.vcxproj
+*vcxproj.*
+
+# MinGW generated files
+*.Debug
+*.Release
+
+# Python byte code
+*.pyc
+
+# Binaries
+# --------
+*.dll
+*.exe
+
+**/.DS_Store
+**/.idea/
+**/build
+**/cmake-build-debug
+**/valgrind*
+=======
+build/
+.vscode/
+.DS_Store
+build-PartyTime-Desktop_x86_darwin_generic_mach_o_64bit-Debug/
