--- a/project/client/interface/PartyTime/Pages/CMakeLists.txt
+++ b/project/client/interface/PartyTime/Pages/CMakeLists.txt
@@ -5,6 +5,12 @@ project("PagesLib")
 file(GLOB_RECURSE SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/**/*.cpp)
 file(GLOB_RECURSE HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/**/*.hpp ${CMAKE_CURRENT_SOURCE_DIR}/**/*.h)
 
+find_package(QT NAMES Qt6 COMPONENTS Widgets SvgWidgets LinguistTools test REQUIRED)
+find_package(Qt${QT_VERSION_MAJOR} COMPONENTS Widgets SvgWidgets LinguistTools REQUIRED)
+find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Network)
+find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Multimedia)
+find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS MultimediaWidgets)
+
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/..)
 set(PAGES_LIB_NAME pages)
 set(PAGES_LIB_DEP ${CMAKE_CURRENT_SOURCE_DIR}/AuthorizationPage ${CMAKE_CURRENT_SOURCE_DIR}/EventViewPage
@@ -12,7 +18,7 @@ ${CMAKE_CURRENT_SOURCE_DIR}/LoadingPage ${CMAKE_CURRENT_SOURCE_DIR}/OrganizerPag
 ${CMAKE_CURRENT_SOURCE_DIR}/VisitorEventListPage ${CMAKE_CURRENT_SOURCE_DIR}/VisitorPage)
 
 add_library(${PAGES_LIB_NAME} ${SOURCES} ${HEADERS})
-target_link_libraries(${PAGES_LIB_NAME} ${COMPONENTS_LIB} Qt${QT_VERSION_MAJOR}::Widgets)
+target_link_libraries(${PAGES_LIB_NAME} ${COMPONENTS_LIB} Qt${QT_VERSION_MAJOR}::Widgets Qt${QT_VERSION_MAJOR}::SvgWidgets Qt${QT_VERSION_MAJOR}::Multimedia Qt${QT_VERSION_MAJOR}::MultimediaWidgets)
 target_include_directories(${PAGES_LIB_NAME} PUBLIC ${PAGES_LIB_DEP} ${COMPONENTS_INCLUDE_DIRS})
 
 set(PAGES_LIB ${PAGES_LIB_NAME})
