--- a/project/server/CMakeLists.txt
+++ b/project/server/CMakeLists.txt
@@ -11,10 +11,14 @@ find_package(Boost 1.81.0 REQUIRED REQUIRED COMPONENTS container)
 
 include_directories(${PROJECT_NAME} src/)
 
+set(MY_CXX_FLAGS "-lpqxx -lpq")
+set(CMAKE_CXX_FLAGS ${MY_CXX_FLAGS})
+
 file(GLOB SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/**/*.cpp main.cpp)
 file(GLOB INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/src)
 
 add_executable(${PROJECT_NAME} ${SOURCES})
+
 
 target_include_directories(${PROJECT_NAME} PUBLIC ${HANDLER_LIB_INCLUDE_DIRS})
 target_link_libraries(${PROJECT_NAME} PUBLIC ${HANDLER_LIB_LIBRARIES})
