--- a/project/server/Makefile
+++ b/project/server/Makefile
@@ -3,7 +3,7 @@
 all: build
 
 docker_run: 
-	docker run -it -v "${PWD}:/project" --net=host -v ~/.gitconfig:/etc/gitconfig -v ~/.ssh:/root/.ssh:ro -w "/project" yakwilik/boost_1_81_beta
+	docker run -it -v "${PWD}:/project" --net=host -v ~/.gitconfig:/etc/gitconfig -v ~/.ssh:/root/.ssh:ro -w "/project" yakwilik/mrga_backend
 
 rebuild: clean build
 
@@ -12,3 +12,15 @@ build:
 
 clean:
 	rm -rf build
+
+run: build
+	cd build && ./server
+
+build-up:
+	docker compose up -d --build
+
+compose-log:
+	docker compose logs -f
+
+compose-down:
+	docker compose down -v
