Доработала docker-compose, чтобы командный контейнер запускался с сервером postgres вместе в docker-compose

--- a/project/server/handler/service/repository/docker-compose.yml
+++ b/project/server/handler/service/repository/docker-compose.yml
@@ -10,3 +10,11 @@ services:
       - ./sql_scripts/:/docker-entrypoint-initdb.d
     ports:
       - "5432:5432"
+  container:
+    image: yakwilik/mrga_backend
+    network_mode: "host"
+    volumes:
+      - "${PWD}:/project"
+    working_dir: /project
+    stdin_open: true # docker run -i
+    tty: true
