--- a/project/server/docker-compose.yml
+++ b/project/server/docker-compose.yml
@@ -1,19 +1,22 @@
 version: '3.7'
 services:
   server:
-    image: yakwilik/mrga_backend
+    image: yakwilik/mrga_backend@sha256:b83d2b8943b917d60a42e1a7c7c54c4feabcfa9442d7139e9e5aab763f874c91
 
-    command: make run
-
+    command: bash -c "mkdir -p build
+              &&
+            cd build && cmake ..
+              &&
+            cmake --build .
+              &&
+            ./server"
     working_dir: '/project'
     volumes:
       - "${PWD}/:/project/"
-        #- "sock:/run/postgresql/.s.PGSQL.5432:ro"
-      - "sock:/run/postgresql:ro"
-
-        # network_mode: "host"
     ports:
       - "8080:8080"
+    networks:
+      service-network:
 
   postgres:
     image: postgres:12.0-alpine
@@ -23,8 +26,9 @@ services:
       POSTGRES_PASSWORD: "mashapg"
     volumes:
       - ./sql_scripts/:/docker-entrypoint-initdb.d
-        #- "sock:/run/postgresql/.s.PGSQL.5432"
-      - "sock:/run/postgresql"
+    networks:
+      service-network:
+        ipv4_address: 10.0.0.10
 
     ports:
       - "5432:5432"
@@ -32,9 +36,11 @@ services:
 networks:
   service-network:
     driver: bridge
-
-volumes:
-  sock:
+    ipam:
+      driver: default
+      config:
+      - subnet: 10.0.0.0/24
+        gateway: 10.0.0.1
     
 
 
