--- a/project/server/handler/service/repository/CMakeLists.txt
+++ b/project/server/handler/service/repository/CMakeLists.txt
@@ -6,7 +6,7 @@ OPTION(WITH_TESTING "RUN_WITH_TESTING" OFF)
 OPTION(WITH_MEMCHECK "RUN_WITH_MEMCHECK" OFF)
 OPTION(WITH_SANITIZE "RUN_WITH_SANITIZE" OFF)
 
-set(MY_CXX_FLAGS "-Wall -lpqxx -lpq -Wextra -Wpedantic -fprofile -fprofile-arcs -Wredundant-decls -Wsign-conversion -Wcast-align -Wcast-qual -Wconversion -Wfloat-equal")
+set(MY_CXX_FLAGS "-Wall -Wextra -Wpedantic -fprofile -fprofile-arcs -Wredundant-decls -Wsign-conversion -Wcast-align -Wcast-qual -Wconversion -Wfloat-equal")
 set(MY_SANITIZERS_FLAGS "-fsanitize=address,undefined -fno-sanitize-recover=all -fsanitize-undefined-trap-on-error")
 set(MY_DEBUG_FLAGS "-g -O0")
 set(MY_TEST_FLAGS "-fprofile-arcs -ftest-coverage -fPIC -O0")
@@ -27,6 +27,9 @@ if(WITH_TESTING)
     set(CMAKE_EXE_LINKER_FLAGS ${CMAKE_EXE_LINKER_FLAGS} ${MY_TEST_LINKER_FLAGS})
 endif()
 
+link_directories(/usr/local/lib)
+link_libraries(pq pqxx)
+include_directories(SYSTEM /usr/local/include)
 add_subdirectory(lib)
 
 if(WITH_TESTING)
