--- a/project/server/handler/service/repository/docker-compose.yml
+++ b/project/server/handler/service/repository/docker-compose.yml
@@ -10,6 +10,10 @@ services:
       - ./sql_scripts/:/docker-entrypoint-initdb.d
     ports:
       - "5432:5432"
+    networks:
+      service-network:
+        ipv4_address: 10.0.0.10
+
   container:
     image: yakwilik/mrga_backend
     network_mode: "host"
@@ -18,3 +22,12 @@ services:
     working_dir: /project
     stdin_open: true # docker run -i
     tty: true
+
+networks:
+  service-network:
+    driver: bridge
+    ipam:
+      driver: default
+      config:
+      - subnet: 10.0.0.0/24
+        gateway: 10.0.0.1
