services and repositories run with server

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
               &&
             cmake --build .
               &&
-            ./server"
+            ./project/server/server"
     working_dir: '/project'
     volumes:
       - "${PWD}/:/project/"
