--- a/project/client/PartyTime/connector/lib/CMakeLists.txt
+++ b/project/client/PartyTime/connector/lib/CMakeLists.txt
@@ -3,6 +3,7 @@ project(connector)
 
 if (NOT DEFINED MAIN_DIR)
     set(MAIN_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../../../../.. CACHE PATH MAIN_DIR FORCE)
+    include_directories(SYSTEM ${MAIN_DIR}/deps/include)
     message("MAIN_DIR in connector lib dir: ${MAIN_DIR}\n\n")
 endif ()
 
